test a ver si funciona

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <!-- Seccion 2 -->
         <section class="contenido">
-            <h2>Bienvenidos a Dherma Salud</h2>
+            <h2>Bienvenidos a Dherma Salud!</h2>
             <div class="box">
                 <p>Siempre brindándote el mejor servicio, para el cuidado de tu piel.Con tecnología de avanzada y con un personal altamente calificado.Lorem ipsum dolor sit amet consectetur adipisicing elit. In amet distinctio ipsa consectetur? In assumenda unde qui commodi corporis</p>
                 <div class="boton_prin">
