--- a/secciones/unidades.html
+++ b/secciones/unidades.html
@@ -15,23 +15,55 @@
         <body>
             <!-- Seccion 1 -->
             <header class="header"> 
-                <a href="./index.html" >
-                    <h1 class="titulo">
-                        <span class="color-n">Dherma</span>
-                        Salud
-                    </h1>
-                </a>
-            <!-- Navegación -->
-            <nav class="header__menu">
-                <ul>
-                    <li><a href="../index.html">INICIO</a></li>
-                    <li><a href="../secciones/unidades.html"class="header__menu--activo">UNIDADES</a></li>
-                    <li><a href="../secciones/atencion.html">ATENCION</a></li>
-                    <li><a href="../secciones/contacto.html">CONTACTO</a></li>
-                    <li><a href="../secciones/preguntas-frecuentes.html">FAQ</a></li>
-                </ul>
-            </nav>
-        </header>
+
+                <!-- Navegación Bootstrap -->
+                <div class="container header__menu">
+                    <nav class="navbar fixed-top navbar-expand-sm navbar-light" style="background-color:#e1e5e5">
+                        <a 
+                            href="../index.html"
+                            class="nav-brand mb-0 h1">
+    
+                                <h1 class="titulo">
+                                    <span class="color-n">Dherma</span>
+                                    Salud
+                                </h1>
+                        </a>
+                        <button 
+                        type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#navbarNav"
+                        class="navbar-toggler"
+                        aria-controls="navbarNav"
+                        aria-expanded="false"
+                        aria-label="Toggle navigation"
+                        >
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div 
+                            class="collapse navbar-collapse nav-bar" 
+                            id="navbarNav">
+                            <ul class="navbar-nav row col-12 justify-content-center">
+                                <li class="nav-item active col-sm-12 col-md-12 col-lg-3">
+                                    <a href="../index.html"class="nav-link">INICIO</a>
+                                </li>
+                                <li class="nav-item active col-sm-12 col-md-6 col-lg-2">
+                                    <a href="../secciones/unidades.html"class="nav-link header__menu--activo " >UNIDADES</a>
+                                </li>
+                                <li class="nav-item active col-sm-12 col-md-6 col-lg-2">
+                                    <a href="../secciones/atencion.html"class="nav-link">ATENCION</a>
+                                </li>
+                                <li class="nav-item active col-sm-12 col-md-6 col-lg-2">
+                                    <a href="../secciones/contacto.html"class="nav-link">CONTACTO</a>
+                                </li>
+                                <li class="nav-item active col-sm-12 col-md-6 col-lg-2">
+                                    <a href="../secciones/preguntas-frecuentes.html"class="nav-link">FAQ</a>
+                                </li>
+                            </ul>                    
+                          </div>
+                        </div>
+                    </nav>  
+                </div>
+            </header>
         <!-- Contenido principal -->
         <body>
             <h2>Unidades</h2>
